@@ -1,0 +1,5 @@
+module Daru
+  module Statsample
+    # Fill me up
+  end
+end
