@@ -1,0 +1,5 @@
+require 'daru/adapters/statsample'
+
+describe Daru::Statsample do
+  # Fill me up
+end
