@@ -1,29 +1,29 @@
 require 'spec_helper.rb'
 
 describe Daru::Vector do
-  [:array, :nmatrix].each do |dtype|
+  [:array].each do |dtype| #nmatrix still unstable
     describe dtype do
       before :each do
         @dv = Daru::Vector.new [323, 11, 555, 666, 234, 21, 666, 343, 1, 2], dtype: dtype
-        @dv_with_md = Daru::Vector.new [323, 11, 555, nil, 666, 234, 21, 666, 343, nil, 1, 2]
+        @dv_with_nils = Daru::Vector.new [323, 11, 555, nil, 666, 234, 21, 666, 343, nil, 1, 2]
       end
 
       context "#mean" do
         it "calculates mean" do
           expect(@dv.mean).to eq(282.2)
-          expect(@dv_with_md.mean).to eq(282.2)
+          expect(@dv_with_nils.mean).to eq(282.2)
         end
       end
 
       context "#sum_of_squares" do
-        it "calcs sum of squares" do
-          @dv.sum_of_squares
+        it "calcs sum of squares, omits nil values" do
+          @dv_with_nils.sum_of_squares
         end
       end
 
       context "#standard_deviation_sample" do
         it "calcs standard deviation sample" do
-          @dv.standard_deviation_sample
+          @dv_with_nils.standard_deviation_sample
         end
       end
 
@@ -172,6 +172,31 @@ describe Daru::Vector do
       context "#standard_error" do
         it "calculates standard error" do
           @dv.standard_error
+        end
+      end
+      
+      context "#round" do
+        it "rounds non-nil values" do
+          vector = Daru::Vector.new([1.44,55.32,nil,4], dtype: dtype)
+          expect(vector.round(1)).to eq(Daru::Vector.new([1.4,55.3,nil,4], dtype: dtype))
+        end
+      end
+
+      context "#center" do
+        it "returns a centered vector" do
+          vector = Daru::Vector.new([11,55,33,25,22,nil], dtype: dtype)
+          expect(vector.center.round(1)).to eq(
+            Daru::Vector.new([-18.2, 25.8, 3.8, -4.2, -7.2, nil], dtype: dtype)
+            )
+        end
+      end
+
+      context "#standardize" do
+        it "returns a standardized vector" do
+          vector = Daru::Vector.new([11,55,33,25,nil,22], dtype: dtype)
+          expect(vector.standardize.round(2)).to eq(
+            Daru::Vector.new([-1.11, 1.57, 0.23, -0.26,nil, -0.44], dtype: dtype)
+            )
         end
       end
     end
